feat: apply academic research brand theme across site

--- a/src/content/research/geometric-dl.mdx
+++ b/src/content/research/geometric-dl.mdx
@@ -2,6 +2,8 @@
 title: "Geometric Deep Learning"
 date: "2026-01-20"
 summary: "Exploring symmetry and equivariance in neural networks."
+abstract: "This paper surveys equivariant inductive biases and group-structured representations for robust geometric learning."
+pdfUrl: "/papers/placeholder-paper.pdf"
 tags: ["AI", "Geometry"]
 status: "public"
 readingTime: "5 min read"
